--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hololive
-version = 0.0.8
+version = 0.0.9
 author = Marnixah
 author_email = hololive@marnixah.com
 description = Gets hololive streams
@@ -20,6 +20,6 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
-    requests
+    aiohttp
 [options.packages.find]
 where = src
