--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = hololive
-version = 0.0.18
+version = 0.1.0
 author = Marnixah
 author_email = hololive@marnixah.com
 description = Gets hololive streams
@@ -21,5 +21,6 @@ packages = find:
 python_requires = >=3.6
 install_requires =
     aiohttp
+    dateutil
 [options.packages.find]
 where = src
